tests/typec-test/test_out/spec-call.txt
error: 'u32' does not implement '0\Clay'
  --> spec-call\root.ctl:10:29
   |
10 | fn other_main -> u32 => pass(0)
   |                             ^^^ when calling this
   |

info: tir repr of functions:
 fn [todo] 0\pass(var0: param 0) -> param 0 return var0

fn [todo] 0\main() -> uint return 0\pass[uint](0)

fn [todo] 0\other_main() -> u32 return 0\pass[u32](0)

fn [todo] 0\last_main() -> 0\Foo[uint] return 0\pass[0\Foo[uint]](0\Foo[uint]\{0})



